--- a/docs/.vitepress/theme/styles/var.css
+++ b/docs/.vitepress/theme/styles/var.css
@@ -3,7 +3,7 @@
   --vp-c-brand-dark: #c6715b;
   --vp-c-brand-light: #c6715b;
   --vp-c-brand-lighter: #c6715b;
-
+  --vp-c-black-soft: #242424;
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-image-filter: blur(150px);
   --vp-home-hero-image-background-image: linear-gradient(45deg, #ecaf07ea 50%, #c6715b 50%);
@@ -14,6 +14,9 @@
 html .dark {
   --vp-c-brand: #c6715b;
   --vp-c-brand-light: #c6715b;
+  --vp-c-bg: #242424;
+  --vp-code-block-bg: #111;
+  --vp-c-bg-alt: #242424;
 }
 
 .container .name {
