--- a/docs/.vitepress/theme/styles/var.css
+++ b/docs/.vitepress/theme/styles/var.css
@@ -75,3 +75,7 @@ html .dark {
 .VPNavBar .curtain {
   display: none !important;
 }
+
+html.dark .VPNavBar .content-body {
+  background: rgba(36, 36, 36, 0.7) !important;
+}
